# parcel-tracker-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  babel.cfg  cliff.toml  codecov.yml  docker-compose.override.example.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_tracker.yml
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
docs/: api-keys.md  architecture.md  branch-protection.md  i18n.md  observability.md  plugins.md  trackers.md  troubleshooting.md
plugins/: README.md
src/parcel_tracker/: __init__.py  config.py  main.py
src/parcel_tracker/bot/: __init__.py  admin_commands.py  auth_commands.py  callbacks.py  formatting.py  handlers.py  health_commands.py  keyboards.py  lang_command.py  messages.py  navigation_commands.py  notify_commands.py  parcel_commands.py
src/parcel_tracker/core/: __init__.py  detector.py  event_status.py  health.py  http_client.py  rate_limiter.py  registry.py  retry_policy.py  scheduler.py  status_intervals.py  tracker_base.py
src/parcel_tracker/db/: __init__.py  health_repository.py  migrations.py  models.py  notification_repository.py  repository.py
src/parcel_tracker/i18n/: __init__.py  build.py  translator.py
src/parcel_tracker/maps/: geocoder.py  renderer.py  route.py  transport.py
src/parcel_tracker/notifier/: __init__.py  preferences.py  telegram.py
src/parcel_tracker/observability/: __init__.py  exporter.py  logging.py  metrics.py
src/parcel_tracker/trackers/: __init__.py  _track17_backed.py  amazon_logistics.py  aramex.py  australia_post.py  bpost.py  brt.py  canada_post.py  china_post.py  correios.py  correos.py  deutsche_post.py  dhl.py  dpd.py  ems.py  evri.py  fedex.py  gls_europe.py  gls_italy.py  japan_post.py  la_poste.py  oesterreichische_post.py  poste_italiane.py  postnl.py  royal_mail.py  (+7 more)
tests/: conftest.py  test_main_commands.py
tests/bot/: test_callbacks_flows.py  test_cmd_checkall.py  test_cmd_map_picker.py  test_cmd_rename.py  test_cmd_stats.py  test_formatting.py  test_keyboards.py  test_pending_input.py
tests/core/: test_check_user_now.py  test_detection_routing.py  test_scheduler_map.py  test_scheduler_refresh.py
tests/db/: test_repository_carrier.py  test_repository_rename.py  test_repository_stats.py
tests/integration/: test_health_command_flow.py  test_i18n_flow.py  test_main_smoke.py  test_metrics_endpoint.py  test_notify_command_flow.py  test_plugin_discovery.py  test_scheduler_smoke.py
tests/maps/: test_densify.py  test_renderer_quality.py  test_renderer_route.py  test_route.py
tests/notifier/: test_telegram_format.py
tests/trackers/: test_amazon_logistics.py  test_china_post.py  test_ems.py  test_japan_post.py  test_singapore_post.py  test_track17_backed.py
tests/unit/: test_command_lists.py  test_config.py  test_db_migrations.py  test_db_models.py  test_db_repository.py  test_delivered_prompt_always.py  test_detector.py  test_error_handler.py  test_event_status.py  test_health_logic.py  test_health_repository.py  test_html_escaping.py  test_http_client.py  test_migrations_v2.py  test_models_v2.py  test_notification_repository.py  test_notifier.py  test_notifier_events.py  test_notifier_preferences.py  test_notify_default_consistency.py  test_post_init.py  test_preferences_enabled.py  test_rate_limiter.py  test_registry.py  test_repository_events.py  test_repository_lifecycle.py  test_repository_scoping.py  test_retry_policy.py  test_scheduler.py  test_scheduler_batch_errors.py  test_scheduler_delivered.py  test_scheduler_fallback.py  test_scheduler_notify.py  test_scheduler_persist.py  test_scheduler_scraper_notfound_notify.py  test_status_intervals.py  test_status_intervals_disputed.py  test_tracker_base.py
(+143 files in other folders)
